Added test cases for personalized feed