@@ -3,8 +3,10 @@ package io.getstream.client.util;
 import io.getstream.client.config.ClientConfiguration;
 import io.getstream.client.exception.UriBuilderException;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
@@ -26,10 +28,12 @@ public class EndpointUtil {
         checkNotNull(endpoint, "Personalized url cannot be null");
         try {
             if (endpoint.endsWith("/")) {
-                return new URI(endpoint);
+                return new URL(endpoint).toURI();
             } else {
-                return new URI(endpoint.concat("/"));
+                return new URL(endpoint.concat("/")).toURI();
             }
+        } catch (MalformedURLException e) {
+            throw new UriBuilderException("Malformed personalized feed's URL.");
         } catch (URISyntaxException e) {
             throw new UriBuilderException("Malformed personalized feed's URL.");
         }
